Fix broken stamp

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             <p style="margin-top: 20px; font-style: italic;">Và nếu bạn vẫn tự hỏi tại sao tôi lại dị ứng với câu nói "chỉ là đùa thôi mà" đến thế, thì hãy nhìn vào sự mệt mỏi này xem:</p>
             
             <div class="stamp-container">
-                <img src="https://storage.sekai.best/sekai-en-assets/stamp/stamp0052/stamp0052.png" alt="Hoshino Ichika Stamp - Project SEKAI" class="stamp-img">
+                <img src="https://wsrv.nl/?url=https://storage.sekai.best/sekai-en-assets/stamp/stamp0052/stamp0052.png" alt="Hoshino Ichika Stamp - Project SEKAI" class="stamp-img">
             </div>
 
             <p>Đến cả một Hoshino Ichika hiền lành, biết yêu thương bạn bè, còn cảm thấy mệt mỏi khi cuộc sống như một chuỗi những trò đùa tàn nhẫn: Saki bệnh tật đánh mất cả thời cấp 2; Shiho phải tự cô lập bản thân vì sợ sự thiếu nghiêm túc sẽ làm hỏng ước mơ và liên lụy bạn bè; Honami bị bắt nạt, bị hiểu lầm là "giả tạo" chỉ vì bản tính hay lo lắng, chăm sóc người khác quá chu đáo.</p>
