Enhance SEO with meta tags and descriptions
Updated the meta description and added Open Graph and Twitter meta tags for better sharing and SEO.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Jokes - Vui lòng nghiêm túc</title>
-    <meta name="description" content="Tại sao bạn không nên đùa cợt khi đang hỏi hoặc trả lời vấn đề kỹ thuật.">
+    <meta name="description" content="Why you shouldn't joke around when asking or answering someone's questions? / Tại sao bạn không nên đùa cợt khi đang hỏi hay trả lời câu hỏi của người khác?">
+
+    <!-- Open Graph / Facebook / Discord -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nojokesplease.github.io/">
+    <meta property="og:title" content="DO NOT joke around when I am asking a question">
+    <meta property="og:description" content="If someone sends you this link, it means they need a serious answer. Please don't joke around, post memes, or spam.">
+    <meta property="og:image" content="https://nojokesplease.github.io/og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="website">
+    <meta property="twitter:url" content="https://nojokesplease.github.io/">
+    <meta property="twitter:title" content="DO NOT joke around when I am asking a question">
+    <meta property="twitter:description" content="If someone sends you this link, it means they need a serious answer. Please don't joke around, post memes, or spam.">
+    <meta property="twitter:image" content="https://nojokesplease.github.io/og-image.png">
+    
     <style>
         /* CSS nội bộ siêu nhẹ, không dùng framework để tối ưu tốc độ */
         :root {
@@ -647,6 +662,8 @@
     <footer>
         <p>Lấy cảm hứng từ <a href="https://nohello.net" target="_blank">nohello.net</a>.</p>
         <p>Viết bằng sự ghét trò đùa chen ngang câu hỏi nghiêm túc bởi <strong>SweetSea</strong>.</p>
+        <p>This content is released under CC0.</p>
+        <p>You are free to copy, modify, fork, translate, and redistribute it without restriction.</p>
         <p style="font-size: 0.75rem; color: #999;">Trang web được xây với sự hỗ trợ của Gemini.</p>
         <p>Ảnh avatar trong ví dụ: <a href="https://commons.wikimedia.org/wiki/File:Red_suit_anime_girl_temple.png" target="_blank">Red suit anime girl temple</a> (CC0 1.0) từ Wikimedia Commons.</p>
         <p style="font-size: 0.8rem; margin-top: 15px; border-top: 1px dashed #666; padding-top: 10px;">
