Increase pauseEnd duration from 2000ms to 3000ms

--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
     <script>
         // Danh sách câu "gắt" của anh Sea
         const reasons = [
+            "khi TÔI ĐANG HỎI"
             "trong CHỦ ĐỀ NÀY",
             "vì ĐANG TRONG CHỦ ĐỀ NHẠY CẢM",
             "vì NGƯỜI HỎI KHÔNG THÍCH ĐÙA",
@@ -693,7 +694,7 @@
         // Tốc độ gõ (ms)
         const typingSpeed = 50;
         const deletingSpeed = 25;
-        const pauseEnd = 2000;
+        const pauseEnd = 3000;
         const pauseStart = 500;
 
         function type() {
