--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <span class="part1"><span class="highlight-not">Đừng</span> đùa cợt...</span>
             <span class="part2">
                 <span id="dynamic-container">
-                    <span class="prefix">trong</span> <span class="content">CHỦ ĐỀ NÀY</span>
+                    <span class="prefix">khi</span> <span class="content">TÔI ĐANG HỎI</span>
                 </span><span class="cursor"></span>
             </span>
         </h1>
@@ -674,7 +674,7 @@
     <script>
         // Danh sách câu "gắt" của anh Sea
         const reasons = [
-            "khi TÔI ĐANG HỎI"
+            "khi TÔI ĐANG HỎI",
             "trong CHỦ ĐỀ NÀY",
             "vì ĐANG TRONG CHỦ ĐỀ NHẠY CẢM",
             "vì NGƯỜI HỎI KHÔNG THÍCH ĐÙA",
