Sửa lỗi footer nhẹ

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <body>
 
     <nav class="nav-bar">
+        <p>This site is available in other languages:</p>
         <a href="about:blank" title="Switch to English (Coming Soon)">English</a>
     </nav>
 
@@ -323,8 +324,7 @@
     <footer>
         <p>Lấy cảm hứng từ <a href="https://nohello.net" target="_blank">nohello.net</a>.</p>
         <p>Viết bằng sự ghét trò đùa chen ngang câu hỏi nghiêm túc bởi <strong>SweetSea</strong>.</p>
-        <p>This content is released under CC0.</p><br/>
-        You are free to copy, modify, fork, translate, and redistribute it without restriction.</p>
+        <p>This content is released under CC0.</p><br/> You are free to copy, modify, fork, translate, and redistribute it without restriction.</p>
         <p style="font-size: 0.75rem; color: #999;">Trang web được xây với sự hỗ trợ của Gemini.</p>
         <p>Ảnh avatar trong ví dụ: <a href="https://commons.wikimedia.org/wiki/File:Red_suit_anime_girl_temple.png" target="_blank">Red suit anime girl temple</a> (CC0 1.0) từ Wikimedia Commons.</p>
         <p style="font-size: 0.8rem; margin-top: 15px; border-top: 1px dashed #666; padding-top: 10px;">
