sửa lỗi script chạy trước HTML

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="twitter:image" content="https://nojokesplease.github.io/extra/og-image.png">
     
     <link rel="stylesheet" href="web/style.css">
-    <script src="web/textAnimation.js"></script>
+    <script src="web/textAnimation.js" defer></script>
 
 </head>
 <body>
