--- a/web/navbar.html
+++ b/web/navbar.html
@@ -9,8 +9,10 @@
 <body style="padding: 0;"> <!-- Cần phải tắt padding do style body vậy -->
     <nav class="nav-bar">
         <p>This site is available in other languages</p>
-        <a href="/index.html" target="_top" title="English">English</a>
-        <a href="/vi/index.html" target="_top" title="Vietnamese">Tiếng Việt</a>
+        <div class="lang-buttons">
+            <a href="/index.html" target="_top" title="English">English</a>
+            <a href="/vi/index.html" target="_top" title="Vietnamese">Tiếng Việt</a>
+        </div>
         <p class="lang-redirected" id="lang-redirected">
             Your browser says you don't speak the previous language, so I redirected you here.<br>You can switch back if
             I was wrong.
@@ -19,15 +21,37 @@
 </body>
 
 <script>
+    // Hàm gửi chiều cao nội dung lên trang cha
+    function sendHeight() {
+        const height = document.body.scrollHeight;
+        window.parent.postMessage({ type: 'setHeight', height: height }, '*');
+    }
+
     // Lắng nghe lệnh từ trang cha
     window.addEventListener('message', function (event) {
         if (event.data === 'showRedirectMessage') {
             const msgBox = document.getElementById('lang-redirected');
             if (msgBox) {
                 msgBox.classList.add('visible');
+                // Gửi lại chiều cao sau khi hiện thông báo (đợi animation chạy 1 chút hoặc ngay lập tức)
+                // Timeout để đợi animation/DOM update
+                setTimeout(sendHeight, 50);
+                setTimeout(sendHeight, 500);
             }
         }
     });
+
+    // Gửi chiều cao khi load xong
+    window.addEventListener('load', sendHeight);
+
+    // Gửi chiều cao khi resize window
+    window.addEventListener('resize', sendHeight);
+
+    // Sử dụng ResizeObserver để theo dõi thay đổi kích thước body
+    const resizeObserver = new ResizeObserver(() => {
+        sendHeight();
+    });
+    resizeObserver.observe(document.body);
 </script>
 
 </html>
