--- a/web/navbar.html
+++ b/web/navbar.html
@@ -10,8 +10,10 @@
     <nav class="nav-bar">
         <p>This site is available in other languages</p>
         <div class="lang-buttons">
-            <a href="/index.html" target="_top" title="English">English</a>
-            <a href="/vi/index.html" target="_top" title="Vietnamese">Tiếng Việt</a>
+            <a href="/index.html" target="_top" title="English" data-lang="en">English</a>
+            <a href="/vi/index.html" target="_top" title="Vietnamese" data-lang="vi">Tiếng Việt</a>
+            <!-- Future languages can be added here, e.g.: -->
+            <!-- <a href="/ja/index.html" target="_top" title="Japanese" data-lang="ja">日本語</a> -->
         </div>
         <p class="lang-redirected" id="lang-redirected">
             Your browser says you don't speak the previous language, so I redirected you here.<br>You can switch back if
@@ -52,6 +54,34 @@
         sendHeight();
     });
     resizeObserver.observe(document.body);
+
+    // EXPANSIBLE LANGUAGE PATH CHECKER
+    // This script automatically fixes broken links in local development
+    // It works for ANY language link with a 'data-lang' attribute (except 'en')
+    document.querySelectorAll('a[data-lang]').forEach(link => {
+        const langCode = link.getAttribute('data-lang');
+
+        // Skip English or root paths
+        if (langCode === 'en' || !langCode) return;
+
+        // Path we expect in Production (e.g. /vi/index.html)
+        const productionPath = `/${langCode}/index.html`;
+
+        // Check if Production path exists
+        fetch(productionPath, { method: 'HEAD' })
+            .then(response => {
+                if (!response.ok) {
+                    // If not found (404), switch to Local Development path
+                    // e.g. /translations/vi/index.html
+                    console.log(`[Dev Fix] Switching ${langCode} to local path.`);
+                    link.href = `/translations/${langCode}/index.html`;
+                }
+            })
+            .catch(() => {
+                // Network error (likely local), verify fallback
+                link.href = `/translations/${langCode}/index.html`;
+            });
+    });
 </script>
 
 </html>
